--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 pyrogram==2.0.106
-TgCrypto==1.2.5 
-motor==3.1.2
+TgCrypto==1.2.5
+motor[srv]==3.2.0
 dnspython==2.3.0
 hachoir==3.2.0
-Pillow==9.5.0 
+Pillow==9.5.0
 aiohttp==3.8.4
 pytz==2023.3
 psutil
+pymongo==3.12.0
