--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pyrogram==2.0.106
+pymongo==3.12.3
+motor==2.5.1
 TgCrypto==1.2.5
-motor[srv]==3.2.0
 dnspython==2.3.0
 hachoir==3.2.0
 Pillow==9.5.0
